fixed spacing issues

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,8 +1,8 @@
 .display-4{
     font-weight: 500;
 }
-.jumbotron {
-    padding: 3rem 2rem;
+.firstDiv{
+    margin-top: 25px;
 }
 
 .search input{
